asset/index.css
* {
    margin: 0;
    padding: 0;
}

:root {
    --bg1: #f7f9ff;
    --bg2: #fff;
    --text1: #334;
    --text2: #556;
    --text3: #aab;
    --line: rgba(127, 127, 191, .2);
    --ac1: #37f;
    --ac2: rgba(0, 127, 255, .5);
    --ac3: rgba(0, 127, 255, .2);
}

@media (prefers-color-scheme: dark) {
    :root {
        --bg1: #111;
        --bg2: #222;
        --text1: #eee;
        --text2: #ccc;
        --text3: #777;
        --ac1: #fc2;
        --ac2: rgba(255, 191, 0, .5);
        --ac3: rgba(255, 191, 0, .2);
    }
}

a {
    display: inline-block;
    transition: .2s;
    cursor: pointer;
    margin: -.1em -.25em;
    border-radius: .5em;
    padding: .1em .25em;
    color: inherit;
    text-decoration: none;
}

a:hover {
    transform: scale(1.05);
    box-shadow: .1em .2em .5em var(--ac3);
    background: var(--ac1);
    color: var(--bg2);
}

p {
    line-height: 1.5em;
}

b {
    font-weight: bolder;
}

strong {
    color: var(--ac1);
}

mark,
pre {
    border-radius: .5em;
    background: var(--ac3);
    padding: .1em .25em;
    overflow: auto;
    color: var(--ac1);
    font-size: .9em;
}

pre {
    border: 1px solid var(--line);
    background: var(--bg1);
    padding: .5em;
    color: var(--text3);
}

::selection {
    background: var(--ac3);
}

html {
    margin: 0 auto;
    background: var(--bg1);
    width: 90vw;
    min-height: 100vh;
    color: var(--text1);
    font-family: PingFang SC, Helvetica, sans-serif;
}

body>* {
    margin: 1rem 0;
}

.iconfont,
.fa-solid,
.fa-regular,
.fa-brands {
    min-width: 1.2em;
    font-size: 1em;
    text-align: center;
    font-synthesis: none;
}

.fa-space::after {
    content: ' ';
}

[data-sub] {
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

[data-sub]::after {
    display: block;
    opacity: .5;
    content: attr(data-sub);
    font-size: .6em;
}

.between {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: .5em;
}

.dim,
footer {
    color: var(--text3);
    font-size: .8em;
    line-height: 1.5em;
}

.bicol {
    column-gap: 1rem;
    column-count: 2;
}

@media(max-width: 720px) {
    .bicol {
        column-count: 1;
    }

    nav.between,
    footer.between {
        flex-direction: column;
        align-items: stretch;
    }
}

@media(min-width: 960px) {
    html {
        width: 85vw;
        font-size: 18px;
    }
}

.card {
    transition: .5s;
    margin: 0 0 1rem;
    border: 1px solid var(--line);
    border-radius: 1rem;
    background: var(--bg2);
    height: 100%;
    overflow: auto;
}

.card:hover {
    box-shadow: .1em .2em 1em var(--ac3);
    border-color: var(--ac1);
}

.card>* {
    margin: .8rem 1rem;
}

.card>.list {
    color: var(--text2);
}

.list {
    display: flex;
    flex-wrap: wrap;
    align-items: baseline;
    gap: .5em 1rem;
}

